# alife-3d-flocking

./: .gitignore  DASHBOARD_GUIDE.md  DASHBOARD_PERFORMANCE.md  DASHBOARD_TEST_GUIDE.md  DEBUG_CHECKLIST.md  FRONTEND_INTEGRATION_STATUS.md  IMPROVEMENT_ANALYSIS.md  PROJECT_STATUS.md  QUICKSTART_TESTING.md  README.md  SESSION_10_SUMMARY.md  SESSION_11_SUMMARY.md  SESSION_12_SUMMARY.md  SESSION_7_SUMMARY.md  SESSION_8_SUMMARY.md  SESSION_9_SUMMARY.md  WEBGPU_DEBUG_GUIDE.md  WEBGPU_FIX_FINAL.md  WEBGPU_STUCK_FIX.md  pyproject.toml  run_dashboard.sh  start_fullstack.sh  streamlit_app.py  test_backend.sh  test_dashboard_logic.py  test_death_removal.py  test_e2e.sh  test_grid_performance.py  test_grid_simple.py  test_improvements.py  test_predator_serialization.py  test_resource_competition.py  test_webgpu.sh  test_webgpu_fix.html
backend/: README.md  requirements.txt  serializer.py  server.py  simulation_manager.py  start_server.sh  test_client.py
docs/: AGENTS.md  API.md  CHANGELOG.md  GUIDE.md  PERFORMANCE.md  PERFORMANCE_COMPARISON.md  REFACTORING_REPORT.md  SOLVER_DECISION.md  TECH_ALTERNATIVES.md  TEST_REVIEW_REPORT.md  WEBGPU_INTEGRATION_PLAN.md  WEBGPU_QUICKSTART.md
experiments/: benchmark_optimized.py  compare_2d_3d_fixed.py  demo_2d.py  demo_3d.py  demo_advanced_physics.py  demo_advanced_physics_3d.py  demo_foraging.py  demo_group_detection.py  demo_heterogeneous.py  demo_obstacles.py  demo_presets.py  visualizer_2d.py  visualizer_3d.py
frontend/: README.md  package-lock.json  package.json  test_point_size.html  webgpu-test.html
src/: flocking_2d.py  (+6 more)
(+31 files in other folders)
