# Taichi-based Morse + Rayleigh Flocking

[project]
name = "alife-flocking"
version = "0.1.0"
description = "3D Flocking simulation using Morse potential + Rayleigh friction"
requires-python = ">=3.9"
dependencies = [
    "taichi>=1.7.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
